--- a/package.json
+++ b/package.json
@@ -47,6 +47,13 @@
     "lint": "eslint src",
     "test": "vscode-test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kuyaed-1720/vscode-terminal-manager.git"
+  },
+  "keywords": [],
+  "author": "kuyaed-1720",
+  "license": "MIT",
   "devDependencies": {
     "@types/vscode": "^1.93.0",
     "@types/mocha": "^10.0.7",
